# jack-fancycode-samples

androidlocalsocket/app/: build.gradle  proguard-rules.pro
androidlocalsocket/app/src/androidTest/java/com/example/jack/localsocket/: ApplicationTest.java
androidlocalsocket/app/src/main/: AndroidManifest.xml
androidlocalsocket/app/src/main/java/com/example/jack/localsocket/: MainActivity.java
androidlocalsocket/app/src/main/res/layout/: activity_main.xml
androidlocalsocket/app/src/main/res/values/: strings.xml  styles.xml
androidservice/: .project  AndroidManifest.xml
androidservice/res/layout/: activity_main.xml
androidservice/res/menu/: main.xml
androidservice/res/values/: strings.xml
androidservice/src/com/example/androidservicesample/: MainActivity.java  ServiceTest.java
androidsocket/client/: .project  AndroidManifest.xml
androidsocket/client/res/menu/: main.xml
androidsocket/client/res/values/: strings.xml
androidsocket/client/src/com/example/androidclientsocket/: MainActivity.java
androidsocket/server/res/menu/: main.xml
androidsocket/server/src/com/example/androidserversocket/: MainActivity.java
array/: array_initialize.cpp
bluez/le/browser/: Makefile  bluetooth.sublime-project  bluetooth.sublime-workspace  browser.c  hcilocal.c  hcilocal.h
callback/: callback  callback.c
classlib/inc/: iface.h
classlib/lib/: build.sh  iflib.cpp
classlib/src/: build.sh  main.cpp
cmake/: CMakeLists.txt
cmake/src/: main.cpp
cmake/toolchain/: Linux_ARMV7L.toolchain  Linux_X86_32.toolchain  Linux_X86_64.toolchain  MacOSX_X86_32.toolchain  MacOSX_X86_64.toolchain  iPhoneOS_ARMV7.toolchain  iPhoneOS_ARMV7S.toolchain  iPhoneOS_I386.toolchain
daemon/: daemon  daemon.c
dbus/client/: send.c
dbus/server/: listen.c
detectsdx/: .detectsdx.c.swp  detectsdx.c
gstreamer/: Makefile
gstreamer/src/: .Makefile.swp  Makefile
gtest/: run.sh
gtest/src/: calculator.cpp  calculator.h
gtest/test/: calculator_test.cpp  calculator_test.h  testmain.cpp
gtk/: .tags  helloworld  helloworld.c  readme
hellondk/: AndroidManifest.xml
hellondk/jni/: Android.mk  hellojni.c
hellondk/jni/include/: hellojni.h
hellondk/res/layout/: activity_main.xml
hellondk/res/menu/: main.xml
hellondk/src/com/example/hellojni/: MainActivity.java
linux-arm-app/: Makefile
linux-arm-app/src/: main.c
macrocomp/: main.c  predef.h
packet/: .cproject  jpack.cpp  jpack.h  main.cpp
packet/include/: defaultType.h  simpleCRC32.h
pointermember/: pointmembermethod.cpp  run.sh
portforward/: jrt.sh
queue/: queue.cpp
shell/: .arm_env  .arm_env.swp  .includepreconf.sh.swp  caseuntil.sh  filechecktest.sh  includepreconf.sh  inquirytest.sh
socket/client/: socket_client.c
socket/server/: socket_server.c
timestamp/: readme
udev/: udevcheck
usbdetect/: .usbdetect.c.swp  usbdetect.c
